<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AboutActivity" >

    <TextView
        android:id="@+id/about_version_lbl"
        android:text="@string/about_version_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10" 
        android:textColor="@color/title_color"/>
    <TextView
        android:id="@+id/about_version"
        android:text="@string/about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_version_lbl"
        android:ems="10" />
    
    <TextView
        android:id="@+id/about_author_lbl"
        android:text="@string/about_author_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_version"
        android:layout_marginTop="10dp"
        android:ems="10" 
        android:textColor="@color/title_color" />
    <TextView
        android:id="@+id/about_author"
        android:text="@string/about_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_author_lbl"
        android:ems="10" />
    
    <TextView
        android:id="@+id/about_purpose_lbl"
        android:text="@string/about_purpose_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_author"
        android:layout_marginTop="10dp"
        android:ems="10" 
        android:textColor="@color/title_color" />
    <TextView
        android:id="@+id/about_purpose"
        android:text="@string/about_purpose"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_purpose_lbl"
        android:ems="10" />
    
    <TextView
        android:id="@+id/about_contact_lbl"
        android:text="@string/about_contact_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_purpose"
        android:layout_marginTop="10dp"
        android:ems="10" 
        android:textColor="@color/title_color" />
    <TextView
        android:id="@+id/about_contact"
        android:text="@string/about_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_contact_lbl"
        android:ems="10" />
    
    <TextView
        android:id="@+id/about_website_lbl"
        android:text="@string/about_website_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_contact"
        android:layout_marginTop="10dp"
        android:ems="10" 
        android:textColor="@color/title_color" />
    <TextView
        android:id="@+id/about_website"
        android:text="@string/about_website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_website_lbl"
        android:ems="10" />


</RelativeLayout>