<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="MergeRootFrame" >

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/submit"
        android:text="@string/reset" />
    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/calculate" />
    
    <EditText
        android:id="@+id/e85MPG"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/submit"
        android:hint="@string/e85_mpg"
        android:inputType="numberDecimal" />
    
    <EditText
        android:id="@+id/gasMPG"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/e85MPG"
        android:hint="@string/gas_mpg"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/e85Price"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/gasMPG"
        android:hint="@string/e85_price"
        android:inputType="numberDecimal" />
    
    <EditText
        android:id="@+id/gasPrice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/e85Price"
        android:hint="@string/gas_price"
        android:inputType="numberDecimal" />
    
    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gasPrice"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/result_initial" />   
</RelativeLayout>