<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity" >

    <Button
        android:id="@+id/settings_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/settings_save" />
    <Button
	    android:id="@+id/settings_reset"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_toLeftOf="@+id/settings_save"
	    android:text="@string/reset" />

	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" 
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp" 
	    android:layout_below="@+id/settings_save" >
	    
	    <TextView
	        android:id="@+id/dist_unit_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/dist_unit_prompt" />
		<Spinner
	        android:id="@+id/dist_unit_prompt"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/dist_unit_label"
	        android:entries="@array/dist_unit_arrays"
	        android:prompt="@string/dist_unit_prompt" />
		
		<TextView
	        android:id="@+id/fuel_unit_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/dist_unit_prompt"
	        android:text="@string/fuel_unit_prompt" />
		<Spinner
	        android:id="@+id/fuel_unit_prompt"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/fuel_unit_label"
	        android:entries="@array/fuel_unit_arrays"
	        android:prompt="@string/fuel_unit_prompt" />
		
		<TextView
	        android:id="@+id/currency_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/fuel_unit_prompt"
	        android:text="@string/currency_prompt" />
		<Spinner
	        android:id="@+id/currency_prompt"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/currency_label"
	        android:entries="@array/currency_arrays"
	        android:prompt="@string/currency_prompt" />
	</RelativeLayout>

	

</RelativeLayout>